--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="stylesheet" href="./css/all.css">
     <title>Hisingsbron broöppning</title>
   </head>
   <body>
