--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#00002b" />
+    <meta name="image" content="%PUBLIC_URL%/apple-touch-icon.png"/>
     <meta
       name="description"
       content="Är Hisingsbron öppen nu? Se nästa broöppning för Hisingsbron."
