--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head prefix="og: https://ogp.me/ns#">
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
@@ -11,6 +11,10 @@
       name="description"
       content="Är Hisingsbron öppen nu? Se nästa broöppning för Hisingsbron."
     />
+    <meta property='og:title' content='Hisingsbron broöppning' />
+    <meta property='og:image' content='//bridgepreview.png '/>
+    <meta property='og:description' content='Är Hisingsbron öppen nu? Se nästa broöppning för Hisingsbron.' />
+    <meta property='og:url' content='https://www.goldenglenn.se' />
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
 
     <!--
