--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,14 @@
     -->
     <link rel="stylesheet" href="./css/all.css">
     <title>Hisingsbron broöppning</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5CGNKGN374"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-5CGNKGN374');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
