--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,9 @@
       content="Är Hisingsbron öppen nu? Se nästa broöppning för Hisingsbron."
     />
     <meta property='og:title' content='Hisingsbron broöppning' />
-    <meta property='og:image' content='//bridgepreview.png '/>
+    <meta property='og:image' content='%PUBLIC_URL%/bridgepreview.png' />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="627" />
     <meta property='og:description' content='Är Hisingsbron öppen nu? Se nästa broöppning för Hisingsbron.' />
     <meta property='og:url' content='https://www.goldenglenn.se' />
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
