--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
       gtag('js', new Date());
       gtag('config', 'G-5CGNKGN374');
     </script>
-    <script src="https://app.embed.im/snow.js" defer></script>
+    <!-- script src="https://app.embed.im/snow.js" defer></script -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
